# hackerrank-rust

./: Cargo.toml  README.md  main.rs
mancala/: README.md  main.rs
