[package]
name = "mancala-mcts"
version = "0.1.0"
authors = ["Jamieson Leibovitch <jamieson.leibovitch@uoit.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[[bin]]
name = "mancala-mcts"
path = "main.rs"
